# cpp-smallpt

./: CMakeLists.txt
src/: cpp-smallpt.cpp  imageio.hpp  specular.hpp  vector.hpp
